Update visuals and performance

--- a/Mango/Assets/WebGLTemplates/MainTheme/index.html
+++ b/Mango/Assets/WebGLTemplates/MainTheme/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Mango</title>
+    <title>Earth 2099</title>
     <link rel="stylesheet" href="./style.css">
     <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
     <script src="%UNITY_WEBGL_LOADER_URL%"></script>
@@ -18,7 +18,7 @@
       <div class="footer">
         <div class="webgl-logo"></div>
         <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
-        <div class="title">Mango</div>
+        <div class="title">Earth 2099</div>
       </div>
     </div>
     <div class="controls">
@@ -33,6 +33,5 @@
         <li>Click Derecho + Scroll: Acercar-Alejar Cámara</li>
       </ul>
     </div>
-    
   </body>
 </html>
